hphp/hack/test/typecheck/expression_trees/spliceable_interface.php.exp
ERROR: File "spliceable_interface.php", line 6, characters 25-28:
Unbound name: `Code` (Naming[2049])
ERROR: File "spliceable_interface.php", line 6, characters 19-23:
The method `visit` is not compatible with the overridden method (Typing[4341])
  File "spliceable_interface.php", line 6, characters 19-23:
  Method `visit` has type `(function(Code $v): ExampleDsl::TAst)` in `MySpliceableClass`
  File "expr_tree.php", line 225, characters 19-23:
  But it has type `(function(ExampleDsl $v): ExampleDsl::TAst)` in parent `Spliceable<ExampleDsl, ExampleDsl::TAst, MySpliceableClass>`
  File "spliceable_interface.php", line 6, characters 19-23:
  Type `(function(Code $v): ExampleDsl::TAst)` is not a subtype of `(function(ExampleDsl $v): ExampleDsl::TAst)`
  File "spliceable_interface.php", line 6, characters 25-28:
  Expected `Code`
  File "spliceable_interface.php", line 5, characters 47-56:
  But got `ExampleDsl`
  File "expr_tree.php", line 225, characters 25-32:
    via this generic `TVisitor`
